# rvm2glb

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: pages.yml
crates/capi/: Cargo.toml
crates/capi/include/: rvm2glb.h
crates/capi/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: io.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: color_store.rs  convert.rs  geometry.rs  glb_writer.rs  instancing.rs  io.rs  json_writer.rs  lib.rs  linalg.rs  rvm_parser.rs  status_writer.rs  tessellator.rs  triangulation_factory.rs
crates/tess2-rust/: Cargo.toml
crates/tess2-rust/src/: bucketalloc.rs  dict.rs  geom.rs  lib.rs  priorityq.rs  sweep.rs
crates/tess2-rust/src/mesh/: delaunay.rs  mod.rs  tessellate.rs
crates/tess2-rust/src/tess/: api.rs  connect.rs  dirty_regions.rs  geometry.rs  mod.rs  output.rs  priority_queue.rs  region.rs  sweep.rs  tests.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
samplefilesHuldra/: HA-ARCH.RVM  HA-HVAC.RVM  HA-INST.RVM  HA-MECH.RVM  HA-PIPE.RVM  HA-SAFE.RVM  HA-TELE.RVM
wasm-demo/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
wasm-demo/src/: main.ts  rvmConvert.ts  rvmConvertWorker.ts  vite-env.d.ts  zip.ts
